@@ -37,19 +37,21 @@ period to 2 or greater or 1 to hide.<br>
       <td style="vertical-align: top;">Syntax<br>
       </td>
       <td style="vertical-align: top;">BARS(TYPE)<br>
+BARS(TYPE, COLOR)<br>
       </td>
     </tr>
     <tr>
       <td style="vertical-align: top;">Function<br>
       </td>
-      <td style="vertical-align: top;">Type is either Bar or Candle.<br>
+      <td style="vertical-align: top;">Type is either Bar or Candle.
+The Color parm is only used for the Candle TYPE.<br>
       </td>
     </tr>
     <tr>
       <td style="vertical-align: top;">Example<br>
       </td>
       <td style="vertical-align: top;">BARS(Bar)<br>
-BARS(Candle)<br>
+BARS(Candle, red)<br>
       </td>
     </tr>
   </tbody>
